--- a/posts/another-post-in-the-wall.mdx
+++ b/posts/another-post-in-the-wall.mdx
@@ -1,6 +1,6 @@
 ---
-title: How to create SVG-ready icon symbols in Sketch PART 1
-description: "Consider that for a moment: everything we see around us is assumed to have had a cause and is contingent upon."
+title: Keeping SVG design at the center of your brand design.
+description: "If you consider the amount of places a single asset may need to be used, SVG is the only way..."
 date: May 4 2021
 ---
 
